[package]
name = "ghost-agent"
version = "0.1.0"
edition = "2021"
description = "Ghost-Relay Decentralized C2 Agent - Educational Use Only"
license = "Restricted Educational License"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4"] }
base64 = "0.21"
async-trait = "0.1"
# FIXED: Added "user" feature for nix::unistd::Uid
nix = { version = "0.27", features = ["user"] } 
regex = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System_Diagnostics_Debug"] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = 'abort'
